--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Data Storage Portal</title>
+        <link rel="stylesheet" type="text/css" href="/StoragePortalMaven/jsfcrud.xhtml" />
         <meta charset="utf-8" />
         <!--[if IE]><meta http-equiv="ImageToolbar" content="False" /><![endif]-->
         <meta name="author" content="Samir Ahmed" />
@@ -66,7 +67,7 @@
                                                                         Backup Planning		</a>
                                                                 </div>
                                                             </div>
-                                                        </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architechture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
+                                                        </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architecture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
                                                         <li class="imMnMnFirst imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Storage Design Architecture</span></div></div><ul data-original-position="open-right" class="open-right">
                                                                 <li class="imMnMnFirst imPage" data-link-paths="/mv3.jsf">
                                                                     <div class="label-wrapper">
@@ -226,7 +227,7 @@
                                                             </li></ul></li><li class="imMnMnMiddle imLevel">
                                                         <div class="label-wrapper">
                                                             <div class="label-inner-wrapper">
-                                                                <span class="label">Architechture Documents</span>
+                                                                <span class="label">Architecture Documents</span>
                                                             </div>
                                                         </div>
                                                         <ul data-original-position="bottom" class="bottom">
@@ -389,6 +390,7 @@
         </div>
 
         <noscript class="imNoScript"><div class="alert alert-red">To use this website you must enable JavaScript.</div></noscript>
-
     </h:body>
+
+
 </html>
