--- a/src/main/webapp/mv3-1.xhtml
+++ b/src/main/webapp/mv3-1.xhtml
@@ -63,7 +63,7 @@
                                                                         Backup Planning		</a>
                                                                 </div>
                                                             </div>
-                                                        </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architechture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
+                                                        </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architecture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
                                                         <li class="imMnMnFirst imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Storage Design Architecture</span></div></div><ul data-original-position="open-right" class="open-right">
                                                                 <li class="imMnMnFirst imPage" data-link-paths="/mv3.jsf">
                                                                     <div class="label-wrapper">
@@ -216,7 +216,7 @@
                                                                             Backup Planning		</a>
                                                                     </div>
                                                                 </div>
-                                                            </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architechture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
+                                                            </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architecture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
                                                             <li class="imMnMnFirst imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Storage Design Architecture</span></div></div><ul data-original-position="open-right" class="open-right">
                                                                     <li class="imMnMnFirst imPage" data-link-paths="/mv3.jsf">
                                                                         <div class="label-wrapper">
