--- a/src/main/webapp/smrc.xhtml
+++ b/src/main/webapp/smrc.xhtml
@@ -64,7 +64,7 @@
                                                                         Backup Planning		</a>
                                                                 </div>
                                                             </div>
-                                                        </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architechture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
+                                                        </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architecture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
                                                         <li class="imMnMnFirst imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Storage Design Architecture</span></div></div><ul data-original-position="open-right" class="open-right">
                                                                 <li class="imMnMnFirst imPage" data-link-paths="/mv3.jsf">
                                                                     <div class="label-wrapper">
@@ -217,7 +217,7 @@
                                                                             Backup Planning		</a>
                                                                     </div>
                                                                 </div>
-                                                            </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architechture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
+                                                            </li></ul></li><li class="imMnMnMiddle imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Architecture Documents</span></div></div><ul data-original-position="bottom" class="bottom">
                                                             <li class="imMnMnFirst imLevel"><div class="label-wrapper"><div class="label-inner-wrapper"><span class="label">Storage Design Architecture</span></div></div><ul data-original-position="open-right" class="open-right">
                                                                     <li class="imMnMnFirst imPage" data-link-paths="/mv3.jsf">
                                                                         <div class="label-wrapper">
@@ -358,7 +358,7 @@
                         <div id="imContent">
                             <a id="imGoToCont"></a>
                             <div class="imContentDataContainer">
-                                <div id="imBreadcrumb">Architechture Documents &gt; Storage Design Architecture</div>
+                                <div id="imBreadcrumb">Architecture Documents &gt; Storage Design Architecture</div>
                             </div>
 
                                     <div id="imPageRowContent_1" class="imContentDataContainer">
